--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "framer-motion": "^11.11.1",
     "next": "14.2.14",
+    "next-sitemap": "^4.2.3",
     "react": "^18",
     "react-dom": "^18"
   },
